# beat_this_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  WINDOWS_BUILD.md  build_windows.bat
Source/: MelSpectrogram.cpp  MelSpectrogram.h  beat_this_api.cpp  beat_this_api.h  beats_to_audio.cpp  main.cpp
cmake/: FetchONNXRuntime.cmake
onnx/: README.md  convert_to_onnx.py
